--- a/mongod.conf
+++ b/mongod.conf
@@ -9,4 +9,4 @@ storage:
 net:
   bindIp: 0.0.0.0
   ssl:
-    mode: disabled  # Explicitly disable SSL to match your no-TLS preference
+    mode: disabled
