--- a/mongod.conf
+++ b/mongod.conf
@@ -4,6 +4,9 @@ systemLog:
   quiet: true
 storage:
   dbPath: /data/db
+  wiredTiger:
+    engineConfig:
+      cacheSizeGB: 0.1
 net:
   bindIp: 0.0.0.0
   ssl:
