--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,14 +1,18 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisord.log
+loglevel=debug
 
 [program:sshd]
-command=/usr/sbin/sshd -D
+command=/usr/sbin/sshd -e
+autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stderr_logfile=/var/log/sshd.log
+stdout_logfile=/var/log/sshd.log
 
 [program:mongod]
-command=mongod --config /etc/mongod.conf
+command=/usr/bin/mongod --config /etc/mongod.conf
+autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stderr_logfile=/var/log/mongod.log
+stdout_logfile=/var/log/mongod.log
