--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,11 +4,12 @@ logfile=/var/log/supervisord.log
 loglevel=debug
 
 [program:sshd]
-command=/usr/sbin/sshd -e
+command=/usr/sbin/sshd -D -e
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/sshd.log
 stdout_logfile=/var/log/sshd.log
+redirect_stderr=false
 
 [program:mongod]
 command=/usr/bin/mongod --config /etc/mongod.conf
