--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ logfile=/var/log/supervisord.log
 loglevel=debug
 
 [program:sshd]
-command=/usr/sbin/sshd -D -e
+command=/usr/sbin/sshd -D -e -f /etc/ssh/sshd_config
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/sshd.log
