--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,7 +12,7 @@ stdout_logfile=/var/log/sshd.log
 redirect_stderr=false
 
 [program:mongod]
-command=/usr/bin/mongod --config /etc/mongod.conf
+command=numactl --interleave=all /usr/bin/mongod --config /etc/mongod.conf
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/mongod.log
